Inc version to 4.0.0, raise Java baseline to 17, publish as JPMS module, and apply internal modernizations.
Change-Id: Ie169d8fdedf3ed0dc9a215af1be7d884427dd93c